<resources>
    <string name="app_name">Speedometer</string>

    <string name="ask_permission">"For the app to work, you need access to the device's location"</string>

    <string name="m_per_sec">m/sec</string>
    <string name="km_per_hour">km/h</string>
    <string name="miles_per_hour">miles/h</string>
    <string name="m">meters</string>
    <string name="km">kilometers</string>
    <string name="mi">miles</string>

    <string name="speed_limit">Speed limit: %1$d</string>
    <string name="speed_value">Speed : %1$d %3$s \nDistance : %2$d %4$s \nAverage : %5$d %3$s\nMax : %6$d %3$s</string>
    <string name="set_speed_limit">Speed limit</string>
    <string name="speedometer_service_status">Speedometer running in the background</string>

    <string name="settings">Settings</string>
    <string name="general_settings_header">GENERAL</string>
    <string name="dark_theme_settings">Dark theme</string>
    <string name="speed_unit_settings">Speed unit</string>
    <string name="speed_resolution_settings">Speedometer resolution</string>
    <string name="distance_unit_settings">Distance unit</string>
    <string name="warning_settings_header">WARNING</string>
    <string name="vibration_settings">Vibration</string>
    <string name="additional_settings_header">ADDITIONAL</string>
    <string name="leave_feedback">Leave a feedback</string>
    <string name="other_projects">Check out our other apps (Ad)</string>

    <string name="reset">Reset</string>

    <string name="gps_disable">GPS deactivated</string>
    <string name="turn_on_gps">Please enable location service.</string>

    <string name="speed_info_distance">Distance</string>
    <string name="speed_info_duration">Duration</string>
    <string name="speed_info_average">Average</string>
    <string name="speed_info_max">Max</string>

    <string name="first_speed_resolution" translatable="false">0 - 40</string>
    <string name="second_speed_resolution" translatable="false">0 - 80</string>
    <string name="third_speed_resolution" translatable="false">0 - 120</string>
    <string name="fourth_speed_resolution" translatable="false">0 - 160</string>
    <string name="fifth_speed_resolution" translatable="false">0 - 240</string>
    <string name="sixth_speed_resolution" translatable="false">0 - 320</string>
    <string name="stop">Pause</string>
    <string name="contin">Continue</string>

    <string name="history">History</string>
    <string name="add_history">Add to history</string>
    <string name="record_title">Record title</string>
    <string name="record_prefill">Record</string>

</resources>