<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/set_round_speedometer"
        android:icon="@drawable/round_speedometer_btm"
        app:showAsAction="always"
        android:title="">
    </item>

    <item
        android:id="@+id/settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/reset"
        android:title="@string/reset" />

    <item
        android:id="@+id/start"
        android:title="@string/contin" />

    <item
        android:id="@+id/addHistory"
        android:title="@string/add_history"/>

    <item
        android:id="@+id/history"
        android:title="@string/history"/>
</menu>